--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
         <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta property=""og:image"
-        content="%PUBLIC_URL%/linkedin-featured-banner.png />
+        content="%PUBLIC_URL%/linkedin-featured-banner.png" />
         <meta name="theme-color" content="#000000" />
         <meta
             name="Slothkins Beta-2"
