--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta
             property="og:image"
-            content="%PUBLIC_URL%/linkedin-featured-banner.png"
+            content="%PUBLIC_URL%/linkedin-featured-banner.jpg"
         />
         <meta name="theme-color" content="#000000" />
         <meta
