--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,16 @@
         <meta charset="utf-8" />
         <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta property="og:title" content="Slothkins Beta-2" />
         <meta
             property="og:image"
             content="%PUBLIC_URL%/linkedin-featured-banner.jpg"
         />
+        <meta
+            property="og:description"
+            content="Machine Learning Applications for Managed Cryptocurrency Investments"
+        />
+        <meta property="og:url" content="%PUBLIC_URL%" />
         <meta name="theme-color" content="#000000" />
         <meta
             name="Slothkins Beta-2"
