--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,7 @@
             property="og:description"
             content="Machine Learning Applications for Managed Cryptocurrency Investments"
         />
-        <meta
-            property="og:url"
-            content="https://slothkins-beta-2.vercel.app/"
-        />
+        <meta property="og:url" content="%PUBLIC_URL%" />
         <meta name="theme-color" content="#000000" />
         <meta
             name="Slothkins Beta-2"
