--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
         />
         <meta
             property="og:description"
-            content="Exploring Machine Learning Algorithms for Crytocurrency Portfolio Management Applications. This application uses K-means clustering to aid in building a crypto portfolio based on currency risk level. Additionally, it utilizes Logistic Regression analysis to predict future price movements based on historical data. Technologies used: JavaScript, React.js, Node.js, Express.js, PostgreSQL, MobX, Material UI, Framer Motion, Object Learning, Math.js, etc."
+            content="Exploring Machine Learning Algorithms for Cryptocurrency Portfolio Management Applications. This application uses K-means clustering to aid in building a crypto portfolio based on currency risk level. Additionally, it utilizes Logistic Regression analysis to predict future price movements based on historical data. Technologies used: JavaScript, React.js, Node.js, Express.js, PostgreSQL, MobX, Material UI, Framer Motion, Object Learning, Math.js, etc."
         />
         <meta property="og:url" content="%PUBLIC_URL%" />
         <meta name="theme-color" content="#000000" />
